compiler/tests/compiler/expected/output/IncompleteTypeError.shtk.txt
MODULE IncompleteTypeError.shtk
ERROR in Line 3 Col 19

    var children: Node[5]
                  ^
Incomplete type can only be a pointer

IncompleteTypeError.shtk:3:18
